fixed overlapping content

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,10 +15,6 @@ a {
   box-sizing: border-box;
 }
 
-section {
-  height: 100vh;
-}
-
 .mainColorBg {
   background-color: #002c59;
 }
